fix: fixed overflow header + flex in footer song section

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ header {
     /* test */
 
     padding: 1.5em;
+    overflow: hidden;
 }
 /* nav */
 nav {
@@ -233,6 +234,8 @@ footer{
     width: 100%;
     background-color: #282828;
     /* test */
+
+    z-index: 2;
 }
 
 footer .footer-container{
@@ -254,6 +257,10 @@ footer .footer-container .song {
 }
 
 footer .footer-container .song .song-icons{
+    display: flex;
+    justify-content: center;
+    gap: .5em;
+
     color: #7D7F84;
 }
 
